[package]
name = "claude-notifier"
version = "0.1.0"
edition = "2021"
authors = ["Claude Assistant"]
description = "High-performance notification manager for Teams, Feishu, and WeChat Work"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
